<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_vehicles" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_trips" />
    </group>
    <item android:title="@string/menu_account_header">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
